--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -8,13 +8,14 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 3rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   font-size: 1.25rem;
+  width: 1200px;
 }
 
 .footer {
