--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,8 +5,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Ubuntu, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 h1, h2, h3, h4, h5 {
@@ -21,3 +21,5 @@ a {
 * {
   box-sizing: border-box;
 }
+li { margin-bottom: 8px }
+p { line-height: 1.5 }
